--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,5 +27,5 @@ $number-of-hours-in-a-day: 24;
 
 // Planner
 $hoursOfDaySliceSpacing: 30px;
-$planner-hours-height: fit-content;
+$planner-hours-height: 600px;
 $spacing-top-clickable-planner-area: 11px;
